[project]
name = "via-tools"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "dearpygui>=2.3.1",
    "kicad-python>=0.7.1",
    "mashumaro>=3.20",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "cairosvg>=2.9.0",
    "pillow>=12.2.0",
    "ruff>=0.15.12",
    "typos>=1.45.2",
]

[project.scripts]
via-tools = "via_tools:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["I"]
